# funktio_ohjelmointi2

Week1/: Exercise1.hs  Exercise2.hs  Exercise3.hs
Week2/: Week2.cabal
Week2/.stack-work/: stack.sqlite3
Week2/.stack-work/ghci/478b1da0/: cabal_macros.h
Week2/.stack-work/ghci/cd046b31/: cabal_macros.h
Week2/src/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Main.hs
ties341/: README.md  ties341.cabal
ties341/.stack-work/: stack.sqlite3
ties341/.stack-work/ghci/44319b73/: cabal_macros.h
ties341/.stack-work/ghci/f121730d/: cabal_macros.h
ties341/src/Week1/: Exercise1.hs  Exercise2.hs  Exercise3.hs
ties341/src/Week2/: Exercise1.hs  Exercise2.hs  Exercise3.hs
ties341/src/Week3/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Test.hs  testi.txt
ties341/src/Week4/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs
ties341/src/Week5/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  MonadTest.hs  addresses.cfg  numbers
ties341/src/Week6/: Exercise1.hs  Exercise2.hs  Exercise3.hs
ties341/src/Week7/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs
ties341/src/Week8/: Exercise1.hs  Exercise2.hs
