name:                ties341
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ties341#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ties341
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  exposed-modules:
    Week1.Exercise1
    Week1.Exercise2
    Week1.Exercise3
    Week2.Exercise1
    Week2.Exercise2
    Week2.Exercise3
    Week3.Exercise1
  build-depends:       base >= 4.7 && < 5, containers, profunctors,mtl,transformers, text, megaparsec
